--- a/main.ipynb
+++ b/main.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "2  – Not a big fan of Southern California? Neithe...  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,17 +175,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading (…)okenizer_config.json: 100%|██████████| 2.32k/2.32k [00:00<?, ?B/s]\n",
+      "Downloading (…)ve/main/spiece.model: 100%|██████████| 792k/792k [00:00<00:00, 1.03MB/s]\n",
+      "Downloading (…)/main/tokenizer.json: 100%|██████████| 1.39M/1.39M [00:00<00:00, 1.44MB/s]\n",
+      "Downloading (…)lve/main/config.json: 100%|██████████| 1.21k/1.21k [00:00<?, ?B/s]\n",
+      "Downloading model.safetensors: 100%|██████████| 242M/242M [02:39<00:00, 1.51MB/s] \n",
+      "Downloading (…)neration_config.json: 100%|██████████| 147/147 [00:00<?, ?B/s] \n"
+     ]
+    }
+   ],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(\"DunnBC22/flan-t5-base-text_summarization_data\")\n",
-    "model = AutoModelForSeq2SeqLM.from_pretrained(\"DunnBC22/flan-t5-base-text_summarization_data\")"
+    "tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
+    "model = AutoModelForSeq2SeqLM.from_pretrained(\"t5-small\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +209,7 @@
        " './models/tokenizer.json')"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,22 +256,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Map:   0%|          | 0/4497 [00:00<?, ? examples/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Map: 100%|██████████| 4497/4497 [00:53<00:00, 84.17 examples/s] \n",
-      "Map: 100%|██████████| 1125/1125 [01:02<00:00, 17.93 examples/s]\n"
+      "Map: 100%|██████████| 4497/4497 [00:11<00:00, 396.98 examples/s]\n",
+      "Map: 100%|██████████| 1125/1125 [00:02<00:00, 445.52 examples/s]\n"
      ]
     }
    ],
@@ -276,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,9 +294,8 @@
     "    per_device_eval_batch_size=16,\n",
     "    weight_decay=0.01,\n",
     "    save_total_limit=3,\n",
-    "    num_train_epochs=5,\n",
-    "    seed= 42,\n",
-    "    lr_scheduler_type= \"linear\",\n",
+    "    num_train_epochs=30,\n",
+    "    fp16=True,\n",
     ")"
    ]
   },
@@ -308,7 +313,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_collator = DataCollatorForSeq2Seq(tokenizer=tokenizer, model='DunnBC22/flan-t5-base-text_summarization_data')"
+    "data_collator = DataCollatorForSeq2Seq(tokenizer=tokenizer, model='t5-small')"
    ]
   },
   {
