--- a/implementation.ipynb
+++ b/implementation.ipynb
@@ -349,7 +349,8 @@
           "output_type": "stream",
           "text": [
             "Downloading (…)lve/main/config.json: 100%|██████████| 1.55k/1.55k [00:00<?, ?B/s]\n",
-            "Downloading pytorch_model.bin:  68%|██████▊   | 671M/990M [08:19<03:09, 1.68MB/s]"
+            "Downloading pytorch_model.bin: 100%|██████████| 990M/990M [12:03<00:00, 1.37MB/s]\n",
+            "Downloading (…)neration_config.json: 100%|██████████| 142/142 [00:00<?, ?B/s] \n"
           ]
         }
       ],
@@ -367,18 +368,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
         "doc = \"Climate change is an escalating global crisis with dire implications for our planet. Over the past century, Earth's average temperature has risen by approximately 1.2 degrees Celsius, predominantly due to human activities such as burning fossil fuels and deforestation. This alarming trend has led to a significant increase in extreme weather events, including hurricanes, heatwaves, and wildfires. The concentration of carbon dioxide in the atmosphere has reached around 415 parts per million, well above pre-industrial levels. The consequences are already evident, with the polar ice caps melting at an accelerated rate, resulting in rising sea levels that threaten coastal communities. Urgent action is imperative to curtail further warming and its catastrophic consequences.\"\n",
         "\n",
-        "summ = \"Climate change is a pressing global crisis, marked by a 1.2-degree Celsius rise in Earth's average temperature over the past century due to human activities. This has led to severe weather events, increased carbon dioxide levels at 415 parts per million, and rapid polar ice cap melting causing rising sea levels. Immediate action is crucial to mitigate further devastating effects.\""
+        "doc2 = \"The history of the world is a captivating narrative that unfolds across the ages, painting a vivid portrait of humanity's evolution, achievements, challenges, and aspirations. It is a tale that spans continents, cultures, and civilizations, weaving together a mosaic of experiences that have shaped the course of human existence. The earliest chapters of this story can be traced back to the cradles of civilization, where humanity's first organized societies emerged. Along the fertile banks of rivers like the Tigris and Euphrates, ancient Mesopotamia gave birth to city-states and systems of governance. Similarly, the Nile River nurtured the growth of the illustrious civilization of ancient Egypt, renowned for its monumental architecture, intricate hieroglyphs, and sophisticated understanding of astronomy and mathematics.As centuries unfolded, other great civilizations rose and fell, leaving indelible marks on the annals of history. Ancient Greece, with its democratic ideals, philosophical ponderings, and artistic brilliance, laid the foundation for Western thought and culture. The grandeur of the Roman Empire brought vast territories under its rule, leaving a legacy of law, governance, and engineering marvels. The Middle Ages ushered in a period of feudalism, where kings, knights, and serfs shaped the social fabric of Europe. The spread of Christianity was a unifying force, while the Islamic world flourished with centers of learning, art, and innovation, preserving and expanding upon the knowledge of antiquity. The Renaissance marked a pivotal shift, rekindling the flames of intellectual curiosity and artistic expression. Visionaries like Leonardo da Vinci, Michelangelo, and Copernicus redefined human potential and challenged traditional notions of the cosmos. This era paved the way for the Age of Enlightenment, which championed reason, science, and individual rights, fueling revolutions and the birth of modern democracy. The 19th century brought about the Industrial Revolution, reshaping economies and societies through technological advancements and urbanization. This transformative period propelled humanity into the modern era, enabling unprecedented levels of connectivity and progress. However, it also gave rise to social inequalities and environmental challenges that continue to reverberate today. The 20th century bore witness to two devastating world wars that reshaped political landscapes and human conscience. Struggles for civil rights and decolonization movements shifted the power dynamics of nations, while technological breakthroughs ushered in the digital age, revolutionizing communication, commerce, and culture. As we navigate the 21st century, we stand at a crossroads of unprecedented possibilities and profound challenges. Globalization has interconnected us in ways unimaginable to our ancestors, fostering cultural exchange and international cooperation. Yet, this interconnectedness has also laid bare the disparities that persist between nations and peoples. The history of the world serves as a profound teacher, offering insights into the consequences of our actions and the potential for transformation. It reminds us of the resilience of the human spirit, the power of innovation, and the enduring quest for knowledge and understanding. In this grand narrative, the threads of our past converge, offering wisdom to guide us toward a more enlightened and harmonious future. As we reflect on the lessons of history, let us endeavor to weave a tapestry of compassion, cooperation, and sustainable progress, honoring the diverse cultures, civilizations, and individuals that have contributed to the intricate fabric of human existence.\"\n",
+        "\n",
+        "doc3 = \"The human quest to gaze into the crystal ball of the future has captivated minds for centuries. As technological advancements accelerate and our understanding of the world deepens, the art and science of predicting the future have taken on new dimensions. While we cannot definitively peer into the years ahead, we can glean insights from current trends, emerging technologies, and societal shifts to sketch a possible portrait of what the future might hold. One of the most pronounced arenas of change lies in technology. The trajectory of innovation suggests that artificial intelligence (AI), machine learning, and automation will continue to redefine industries, augment human capabilities, and reshape the nature of work. The Internet of Things (IoT) is projected to weave a seamless web of connectivity, interlinking devices, appliances, and infrastructure in a smart and responsive global network. This could usher in an era of unprecedented convenience and efficiency, but it also raises questions about data privacy, security, and ethical considerations. Advancements in healthcare promise to extend human lifespans and enhance quality of life. Genomic medicine is poised to offer personalized treatments and interventions, while breakthroughs in regenerative medicine might allow us to replace or repair damaged organs and tissues. However, these prospects invite ethical deliberations over issues like genetic modification and the potential for social inequalities in accessing these technologies. Climate change looms large on the horizon, compelling us to reevaluate our relationship with the planet. The future could witness increased efforts to transition to renewable energy sources, adopt sustainable practices, and mitigate environmental degradation. International collaboration and innovative solutions will likely be vital in addressing this global challenge. Urbanization is set to continue its upward trajectory, with mega-cities becoming hubs of innovation and cultural exchange. Smart cities could optimize resource utilization, transportation networks, and urban planning, leading to enhanced living conditions. Simultaneously, managing the influx of people into urban centers will necessitate careful consideration of affordable housing, equitable development, and infrastructure resilience. Education is poised for a transformation as well. Online learning platforms, virtual reality, and AI-driven personalized education might revolutionize how knowledge is disseminated and acquired. Lifelong learning could become the norm, enabling individuals to adapt to rapidly evolving industries and professions. While these glimpses into the future are tantalizing, they also raise significant challenges. Ethical dilemmas surrounding technology, economic disparities, and environmental sustainability demand our attention. Balancing the benefits of innovation with potential risks requires thoughtful consideration and robust governance. In the grand tapestry of the future, uncertainty remains a constant thread. Human agency, resilience, and creativity will undoubtedly play crucial roles in shaping the outcomes. Predicting the future may be an elusive endeavor, but the journey of exploration and anticipation fuels our collective imagination and drives us to mold a future that embodies our highest aspirations – a future that harnesses technology responsibly, embraces diversity, safeguards the planet, and fosters a world of shared prosperity and well-being.\"\n",
+        "\n",
+        "doc4 = \"Glaciers, once colossal and unyielding, are undergoing a profound transformation in the face of an increasingly warming world. The sight of majestic ice fields and towering glaciers melting at an accelerated pace is not merely a spectacle of nature's fluctuations; it is a compelling signpost of the far-reaching impacts of climate change. As temperatures rise, the intricate balance between ice accumulation and melting tips precariously, ushering in a host of environmental, societal, and economic consequences that demand our immediate attention. The phenomenon of rising glacier melts is a global issue, transcending borders and affecting diverse regions. In the Arctic, the rapid retreat of glaciers threatens fragile ecosystems and the traditional ways of life of indigenous communities. As ice cover diminishes, it not only disrupts habitats for Arctic species but also contributes to sea-level rise, heightening the vulnerability of coastal populations worldwide. Glacier melts also extend their icy fingers to mountainous regions, where they play a vital role in supplying freshwater to countless communities downstream. The Himalayas, often referred to as the Third Pole, are experiencing accelerated ice loss with potential ramifications for billions of people who rely on these waters for drinking, irrigation, and energy generation. As glaciers recede, the delicate equilibrium between water supply and demand becomes precarious, increasing the potential for water scarcity and geopolitical tensions. The Antarctic, a continent largely hidden beneath a blanket of ice, is equally susceptible to the impacts of glacier melt. As ice shelves fracture and disintegrate, sea levels rise and coastal landscapes transform. The potential disintegration of massive ice sheets could result in sea-level rise measured in meters, reshaping coastlines and displacing populations. The causes of glacier melt are multi-faceted, primarily driven by the rise in global temperatures attributed to human activities. Greenhouse gas emissions, deforestation, and industrial practices contribute to the heat-trapping effect that warms the planet. This excess heat radiates into polar and mountainous regions, accelerating ice loss. Mitigating the consequences of rising glacier melts demands a comprehensive and collaborative approach. International agreements, such as the Paris Agreement, signify global recognition of the urgency to curb emissions and limit global temperature rise. Investment in renewable energy sources, sustainable land use practices, and resilient infrastructure are critical steps toward reducing the human footprint on the environment. Local and indigenous knowledge can also play a pivotal role in understanding and adapting to the changes in glacier dynamics. Empowering communities to engage in sustainable resource management and disaster preparedness is crucial to ensure their resilience in the face of a changing climate. The tale of melting glaciers is not one of inevitable demise but an invitation to embrace change and take decisive action. By acknowledging the interconnectedness of our actions and their consequences, we can alter the course of this narrative. As we navigate the uncharted waters of a warmer world, let the story of melting glaciers serve as a poignant reminder of our responsibility to safeguard the planet for current and future generations. It is a call to embrace a future where bold innovation, collective efforts, and an unwavering commitment to environmental stewardship lead us toward a more sustainable and harmonious coexistence with the natural world.\"\n",
+        "\n",
+        "doc5 = \"The name \"Ferrari\" evokes a sense of speed, luxury, and innovation in the automotive world. Established in 1939 by Enzo Ferrari, the company has become synonymous with high-performance sports cars that blend cutting-edge technology with exquisite design. With a rich history spanning over eight decades, Ferrari has not only dominated the race tracks but has also left an indelible mark on the global automotive industry.\n",
+        "\n",
+        "Founding and Early Years:\n",
+        "\n",
+        "Enzo Ferrari, a passionate racing enthusiast, initially established Auto Avio Costruzioni in 1939, focusing on producing racing cars. However, it was in 1947 that the first true Ferrari car, the 125 S, was born. Powered by a V12 engine, the 125 S marked the beginning of Ferrari's tradition of using powerful and meticulously crafted engines in their vehicles. Its victory in the Rome Grand Prix the same year laid the foundation for Ferrari's racing reputation.\n",
+        "\n",
+        "Racing Dominance:\n",
+        "\n",
+        "Throughout the 1950s and 1960s, Ferrari cemented its reputation as a formidable force on the racing circuit. The brand clinched multiple victories in prestigious races like the 24 Hours of Le Mans, Formula One World Championships, and the Mille Miglia. Iconic drivers such as Juan Manuel Fangio and Phil Hill played pivotal roles in establishing Ferrari as a dominant force in motorsports.\n",
+        "\n",
+        "Street-Legal Supercars:\n",
+        "\n",
+        "While Ferrari's racing achievements were remarkable, the brand also made strides in producing street-legal supercars that embodied the perfect marriage of performance and luxury. The 1960s witnessed the introduction of legendary models like the Ferrari 250 GTO and the Ferrari Daytona. These cars not only showcased the brand's commitment to performance but also displayed the elegance and sophistication that Ferrari was becoming known for.\n",
+        "\n",
+        "Innovation and Technology:\n",
+        "\n",
+        "Ferrari's commitment to innovation has been a driving force behind its success. The brand has consistently pushed the boundaries of automotive technology, introducing advancements that have filtered down to everyday vehicles. Notable innovations include the introduction of the first mid-engined road car, the Ferrari Dino 206 GT, and the use of Formula One-derived technology in models like the Ferrari F40 and the LaFerrari.\n",
+        "\n",
+        "Cultural Impact and Iconic Design:\n",
+        "\n",
+        "Ferrari's impact extends beyond the realm of racing and engineering. The brand's prancing horse logo has become an emblem of luxury and performance, symbolizing a lifestyle associated with speed and exclusivity. Ferrari's unique designs, characterized by sleek lines and aerodynamic contours, have consistently captured the imagination of car enthusiasts and the general public alike.\n",
+        "\n",
+        "Challenges and Evolution:\n",
+        "\n",
+        "The path to success for Ferrari has not been without challenges. Financial struggles and changing market dynamics have at times posed threats to the company's stability. However, Ferrari's ability to adapt and evolve has enabled it to weather these storms and continue producing high-performance vehicles that cater to the desires of its discerning clientele.\n",
+        "\n",
+        "Modern Era and Sustainability:\n",
+        "\n",
+        "As the world has become increasingly conscious of environmental concerns, Ferrari, like other automotive manufacturers, has had to balance its performance-focused legacy with sustainability. The brand's foray into hybrid technology, with models like the SF90 Stradale, showcases its commitment to reducing emissions while still delivering exhilarating performance.\n",
+        "\n",
+        "Conclusion:\n",
+        "\n",
+        "In conclusion, Ferrari's history is a tapestry woven with speed, elegance, and innovation. From its humble beginnings as a racing team to its status as a global luxury brand, Ferrari's journey has been marked by groundbreaking achievements on the track and revolutionary advancements in automotive technology. The prancing horse emblem remains a symbol of excellence and passion, embodying the spirit of Enzo Ferrari's enduring vision. As the brand continues to evolve, it will undoubtedly carve new chapters in the annals of automotive history, upholding its legacy as a true icon of speed and style.\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 10,
       "metadata": {
         "id": "ABRrpsbpyU-r"
       },
@@ -397,7 +436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -409,14 +448,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
-              "\"<pad> – The unemployment rate fell sharply in March, but the numbers aren't so bad: The unemployment rate fell to 8.2%, the lowest since January 2009. The unemployment rate is expected to hold steady at 8.3%, reports MarketBeat. The unemployment rate is expected to hold steady at 8.3%, reports the Wall Street Journal. The economy added 120,000 jobs in March, down from more than 200,000 in each of the previous three months. The unemployment rate dropped to 8.2%, the lowest since January 2009. The official unemployment tally only includes those seeking work. The economy has added 858,000\""
+              "'<pad> Climate change is an escalating global crisis with dire implications for our planet.</s>'"
             ]
           },
-          "execution_count": 36,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -426,6 +462,13 @@
         "\n",
         "predicted_summary"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
